# ymtui

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
ymtui/: __init__.py  app.py  config.py  i18n.py  mpris.py  player.py  state.py
ymtui/api/: __init__.py  client.py
ymtui/screens/: help_screen.py  main_screen.py
ymtui/styles/: app.tcss
ymtui/widgets/: __init__.py  library.py  now_playing.py  search.py  tracklist.py
